--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "connected-react-router": "^4.2.3",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
