--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.16",
+    "react-unity": "0.0.19",
+    "react-unity-webgl": "^5.7.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0"
   },
