--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "connected-react-router": "^4.2.3",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
@@ -13,8 +14,7 @@
     "react-scripts": "1.0.16",
     "react-unity-webgl": "^6.1.0",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0",
-    "redux-saga-jwt": "0.0.5"
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
