--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "connected-react-router": "^4.2.3",
     "isomorphic-fetch": "^2.2.1",
+    "js-file-download": "^0.4.1",
     "lodash": "^4.17.4",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
